[package]
name = "ratnet"
version = "0.1.0"
edition = "2021"
authors = ["RatNet Contributors"]
description = "A Rust port of RatNet - anonymity network for mesh routing and embedded scenarios"
license = "GPL-3.0"
repository = "https://github.com/awgh/ratnet-rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
arc-swap = "1.6"

# Networking and DNS for P2P
dns-parser = { version = "0.8", optional = true }
rand = "0.8"
hex = "0.4"
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"

# Data structures
bytes = "1.4"
dashmap = "5.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
byteorder = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling  
thiserror = "1.0"
anyhow = "1.0"

# Command line argument parsing
clap = { version = "3.2", features = ["derive"] }

# Cryptography
ring = "0.16"
base64 = "0.21"
rcgen = "0.11"

# Optional features
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"], optional = true }
rustls = { version = "0.21", optional = true }
tokio-rustls = { version = "0.24", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-rustls = { version = "0.24", optional = true }
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3.5"

[features]
default = ["sqlite", "tls", "https", "p2p"]
sqlite = ["sqlx"]
tls = ["rustls", "tokio-rustls", "rustls-pemfile"]
https = ["hyper", "hyper-rustls", "rustls", "rustls-pemfile"]
p2p = ["dns-parser"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 
